--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -9,7 +9,7 @@ output: html_document
 
 # **1 - LOAD PACKAGES**
 
-```{r warning=TRUE}
+```{r warning=FALSE}
 library(tidyverse)
 library(StreamCatTools) #why was this removed? Is it needed for pulls?
 library(readxl)
@@ -19,6 +19,7 @@ library(vip)
 library(caret)
 library(rpart)
 library(rpart.plot)
+library(ORDEQBioassessment)
 ```
 
 # **2 - IMPORT DATA**
@@ -26,7 +27,7 @@ library(rpart.plot)
 ## STATIONS/TSS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
 
 ```{r}
-tss <- read_excel("tss_2025-11-05.xlsx") #output file from ref benchmarks script
+tss <- read_excel("TSS_2025-11-06.xlsx") #output file from ref benchmarks script
 
 comids <- tss %>% select(COMID) #get just the COMIDs for next step
 ```
@@ -194,6 +195,8 @@ other <- get_streamcat(comids = comids, type = "Others")
 meow <- list(ag, clim, dams, flow, iwi, cover, litho, mintox, roads, urb, fire, other)
 meow <- meow %>% reduce(full_join, by='COMID')
 
+rm(list=c('ag', 'clim', 'dams', 'flow','iwi', 'cover', 'litho', 'mintox', 'roads', 'urb', 'fire', 'other'))
+
 # IDENTIFY WHICH COMID(S) DIDN'T YIELD STREAMCAT RESULTS AND INVESTIGATE (FIX IN STATIONS DB BEFORE PROCEEDING)
 # kcomids <- meow %>% select(COMID)
 # nomatch <- comids[!comids$COMID %in% kcomids$COMID, ] #make data frame showing which COMIDs aren't pulling StreamCat data
@@ -208,6 +211,20 @@ meow <- meow %>% reduce(full_join, by='COMID')
 #   pivot_longer(cols = everything()) %>%
 #   group_by(name) %>%
 #   summarise(var_value = var(value))
+```
+
+#### Add additional variables not from SC (Erodible vs. resistant, slope, stream power)
+
+```{r}
+erod_resist_strmpow <- meow %>%
+  mutate(PCT_EROD = PCTALLUVCOASTWS+PCTCARBRESIDWS+PCTCOASTCRSWS+PCTCOLLUVSEDWS+PCTEOLCRSWS+PCTEOLFINEWS+PCTGLACLAKECRSWS+PCTGLACLAKEFINEWS+PCTGLACTILCLAYWS+PCTGLACTILCRSWS+PCTGLACTILLOAMWS+PCTNONCARBRESIDWS+PCTSALLAKEWS) %>%
+  mutate(PCT_RESIST = PCTALKINTRUVOLWS+PCTEXTRUVOLWS+PCTHYDRICWS+PCTSILICICWS) 
+
+erod_resist_strmpow <- ORDEQBioassessment::get_NHD_info(erod_resist_strmpow)
+
+erod_resist_strmpow <- erod_resist_strmpow %>% 
+  mutate(STRMPOW_CAT = totdasqkm + PRECIP9120WS * slope) %>%  # WSAREASQKM from SC, instead pulling totdasqkm from get_NHD (they are the same)
+  select(COMID, PCT_EROD, PCT_RESIST, STRMPOW_CAT, NHD_pSLOPE, SITE_TYPE)
 ```
 
 #### Make Spearman correlation matrix to identify co-varied parameters
@@ -229,7 +246,7 @@ matrix <- spear.rows %>%
 #export once, then clean up in Excel
 #write_xlsx(matrix, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans2_rerun.xlsx")
 
-rm(list=c('ag', 'clim', 'dams', 'flow','iwi', 'cover', 'litho', 'mintox', 'roads', 'urb', 'fire', 'other', 'spear', 'spear.rows'))
+rm(list=c('spear', 'spear.rows'))
 ```
 
 #### Explore co-varied metrics and select which we want to retain for modeling purposes (SB, SH, AT did together in Excel). See <https://stateoforegon.sharepoint.com/:x:/r/sites/BiomonitoringisFun/Shared%20Documents/General/Env%27t%20Stats%20Class%20Project%202025/StreamCat/Spearmans2.xlsx?d=wc5d82026542a417589be75842d6fafe3&csf=1&web=1&e=dhYR5Q> for decisions, and <https://stateoforegon.sharepoint.com/:x:/r/sites/BiomonitoringisFun/Shared%20Documents/General/Env%27t%20Stats%20Class%20Project%202025/StreamCat/Spearmans2.xlsx?d=wc5d82026542a417589be75842d6fafe3&csf=1&web=1&e=dhYR5Q> for full list of metric names.
@@ -366,8 +383,14 @@ other2 <- get_streamcat(comids = comids, type = "Others2")
 meow2 <- list(ag2, clim2, dams2, flow2, cover2, litho2, mintox2, roads2, urb2, fire2, other2) # Removed iwi2 to remove IWI metrics.  11/5/25.
 meow2 <- meow2 %>% reduce(full_join, by='COMID')
 
+# JOIN WITH OTHER PARAMETERS NOT FROM SC (Erodible vs. resistant, slope, stream power)
+scmets <- inner_join(meow2, erod_resist_strmpow, by='COMID')
+
 # REMOVE METRICS FOR UNWANTED REPRESENTATIVE COMIDS FOR SITES ON HIGH RES NHD LAYER
 scmets <- subset(meow2, meow2$COMID != '23774647' & meow2$COMID != '23877125' & meow2$COMID != '23810652')
+
+# CLEAN UP ENVIRONMENT
+rm(list=c('ag2','clim2','cover2','dams2','fire2','flow2','litho2','mintox2','other2','roads2','urb2'))
 ```
 
 #### Pefrorm final correlation check
@@ -384,7 +407,11 @@ matrix2 <- spear.rows2 %>%
   filter(abs(cor) > 0.8)
 
 # CONTINUE ONCE NO CORRELATED VARIABLES REMAIN
+
+# CLEAN UP ENVIRONMENT
+rm(list=c('spear.rows2', 'spear2', 'matrix2'))
 ```
+
 
 # **3 - PREPARE DATA FOR MODELS**
 
@@ -400,12 +427,9 @@ scmets$SW_FLUXWS <- na.roughfix(scmets$SW_FLUXWS) #surface water flux (n = 2 NAs
 
 # MERGE THE DESIRED STREAMCAT METRIC DATA WITH THE TSS AWQMS DATA PULL
 tss.sc <- inner_join(tss, scmets, by = "COMID")
-
-# CLEAN UP ENVIRONMENT
-rm(list=c('ag2','clim2','cover2','dams2','fire2','flow2','litho2','mintox2','other2','roads2','urb2','meow2', 'spear.rows2', 'spear2', 'matrix2'))
 ```
 
-## GROUP PREDICTORS BY HUMAN VS NATURAL DISTURBANCES - WORK IN PROGRESS (SABINE)
+## GROUP PREDICTORS BY HUMAN VS NATURAL DISTURBANCES
 
 ```{r}
 human.mets <- kitty %>% 
@@ -415,36 +439,37 @@ human.mets <- kitty %>%
 
 human.mets <- toupper(human.mets$Metric_Query) # All uppercase
 
-natural.mets <- kitty %>% 
-  filter(Category == "Natural" & kitty$`Use?` == 'y') %>% 
-  select(Metric_Query) %>% 
-  add_row(Metric_Query = "COMID")
-
-natural.mets <- toupper(natural.mets$Metric_Query)
-
-# Select out scmets by human and natural.
-# Ending in WS only
+# Select out scmets by human only.
+  # Ending in WS only
 scmetsws <- scmets %>% 
     select(COMID | ends_with("ws")) %>%  # Keep COMID
     rename_with(~str_remove(., paste0("WS", "$")), ends_with("WS")) # Remove 'WS' suffix so can match to metric names in 'kitty' table
 
-# Subset only column names that are in human or natural mets
-scmetws_human <- scmetsws[ , names(scmetsws) %in% human.mets] # 27 variables
-scmetws_natural <- scmetsws[ , names(scmetsws) %in% natural.mets] # 48 variables
+  # Subset only column names that are in human or natural mets
+scmetws_human <- scmetsws[ , names(scmetsws) %in% human.mets] # 27 variables (including COMID)
 
-# Add 'WS' suffix back in
-colnames(scmetws_human) <- paste0(colnames(scmetws_human), "WS")
-colnames(scmetws_natural) <- paste0(colnames(scmetws_natural), "WS")
+  # Add 'WS' suffix back in
+colnames(scmetws_human) <- paste0(colnames(scmetws_human), "WS") 
+scmetws_human <- scmetws_human %>%  rename(COMID = COMIDWS) # except for COMID
   
-# Do the same thing for metrics not ending in 'WS'
+  # Do the same thing for metrics not ending in 'WS'
 scmetsnows <- scmets %>% 
-    select(!ends_with("ws"))
+    select(!ends_with("ws")) %>% 
+    select(-c("PCT_EROD", "PCT_RESIST", "STRMPOW_CAT", "NHD_pSLOPE", "SITE_TYPE")) # Ignore the metrics that didn't come from StreamCat.
 
-scmet_human <- scmetsnows[ , names(scmetsnows) %in% human.mets] # 1 variable
-scmet_natural <- scmetsnows[ , names(scmetsnows) %in% natural.mets] # 3 variables
+scmet_human <- scmetsnows[ , names(scmetsnows) %in% human.mets] # 1 variable = COMID. (No other human variables in this group.)
 
-sc_human <- cbind(scmetws_human, scmet_human) # 30 variables  #Why is there a column at the end called scmet_human?  SYB figure this out later.
-sc_natural <- cbind(scmetws_natural, scmet_natural) # 49 variables (Total of 79, matches scmets)
+sc_human <- scmetws_human # 28 columns.
+
+# Join with table to get ref status.
+sc_human_ref <- sc_human %>% 
+  inner_join(tss.sc, sc_human, by='COMID') %>% 
+  select(c(COMID:PCTNONAGINTRODMANAGVEGWS.x, ReferenceSite)) %>% 
+  filter(ReferenceSite=='REFERENCE') %>% 
+  select(-c(COMID, ReferenceSite))
+
+# Tidy up.
+rm(list=c('human.mets', 'scmetsws', 'scmetws_human', 'scmetsnows', 'scmet_human', 'sc.human'))
 ```
 
 ## SUBSET DATA - CALIBRATION, VALIDATION, AND REFERENCE ONLY Subset data
@@ -453,15 +478,16 @@ sc_natural <- cbind(scmetws_natural, scmet_natural) # 49 variables (Total of 79,
 # SUBSET DATA AND REMOVE NON-VARIABLE ROWS
 tss.cal <- tss.sc %>% 
   filter(cal_val == 'CAL') %>%  
-  select(-c(MLocID:COMID))  #subset calibration dataset
+  #select(-c(MLocID:COMID, PCT_EROD:SITE_TYPE)) %>% 
+  select(-c(MLocID, StationDes, EcoRegion4:COMID))  #subset calibration dataset
 
 tss.val <- tss.sc %>% 
   filter(cal_val == 'VAL') %>%  
-  select(-c(MLocID:COMID))  #subset validation dataset
+  select(-c(MLocID, StationDes, EcoRegion4:COMID))  #subset validation dataset
 
 tss.ref <- tss.sc %>% 
   filter(ReferenceSite == 'REFERENCE') %>%  
-  select(-c(MLocID:COMID)) #subset reference only dataset
+  select(-c(MLocID, StationDes, EcoRegion4:COMID)) #subset reference only dataset
 ```
 
 # **4 - EXPLORE DATA**
@@ -504,44 +530,42 @@ hist(scmets$PCTAGSLPMID2001WS, main = "", xlab = "% Ag 20% slopes (???), 2001")
 
 ## RANDOM FORESTS
 
-#### Full model - all predictors included (n = 75)
+#### Full model - all predictors included (n = 85)
 
 ```{r}
 # FULL MODEL
 set.seed(42)
 
-rf.full <- randomForest(TSS ~ ., tss.cal, importance = TRUE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
+rf.full <- randomForest(TSS ~ ., tss.cal, importance = FALSE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
 print(rf.full)
 
 varImpPlot(rf.full, type = 1, n.var = 20) #variable importance plot
 vip(rf.full, aesthetics = list(color = "blue", fill = "blue")) #another plot
 
-importance(rf.full)
-
-# PARTIAL DEPENDENCE PLOTS - SINGLE ONLY, NEED TO INCORPORATE FOR LOOP FOR ALL VBLS
-partialPlot(rf.full, as.data.frame(tss.cal), POPDEN2010WS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), PCTAGSLPMID2001WS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), WDRW_LDWS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), PESTIC1997WS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), ELEVWS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), SWS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), PCTCONIF2001WS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), ROCKNWS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), RDCRSWS, ylab = "Predicted TSS")
-partialPlot(rf.full, as.data.frame(tss.cal), SANDWS, ylab = "Predicted TSS")
-
-# PARTIAL DEPENDENCE PLOTS - VARIABLES IN ORDER OF DECREASING IMPORTANCE
-# maybe helps with margins too large error
-graphics.off()
-par("mar")
-par(mar=c(1,1,1,1))
-
-im <- rf.full$importance #importance values for each predictor
-imvar <- rownames(im)[order(im[, 1], decreasing = TRUE)] #predictor's importance values in a decreasing order 
-par(mfrow=c(4,4)) #make 16 plots per page
-for (i in seq_along(imvar)) {
-  partialPlot(rf.full, as.data.frame(tss.cal), imvar[i], xlab = imvar[i], main = "")
-}
+# # PARTIAL DEPENDENCE PLOTS - SINGLE ONLY, NEED TO INCORPORATE FOR LOOP FOR ALL VBLS
+# partialPlot(rf.full, as.data.frame(tss.cal), POPDEN2010WS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), PCTAGSLPMID2001WS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), WDRW_LDWS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), PESTIC1997WS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), ELEVWS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), SWS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), PCTCONIF2001WS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), ROCKNWS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), RDCRSWS, ylab = "Predicted TSS")
+# partialPlot(rf.full, as.data.frame(tss.cal), SANDWS, ylab = "Predicted TSS")
+# 
+# # PARTIAL DEPENDENCE PLOTS - VARIABLES IN ORDER OF DECREASING IMPORTANCE
+# # maybe helps with margins too large error
+# graphics.off()
+# par("mar")
+# par(mar=c(1,1,1,1))
+# 
+# im <- rf.full$importance #importance values for each predictor
+# imvar <- rownames(im)[order(im[, 1], decreasing = FALSE)] #predictor's importance values in a decreasing order 
+# #par(mfrow=c(4,4)) #make 16 plots per page
+# #for (i in seq_along(imvar)) {
+# #  partialPlot(rf.full, as.data.frame(tss.cal), imvar[i], xlab = imvar[i], main = "")
+# #}
 
 # MODEL'S PREDICTION ERROR
 pred.rf <- predict(rf.full, newdata = tss.cal)
@@ -557,7 +581,7 @@ abline(a=0,b=1)
 set.seed(42)
 
 rf.red <- randomForest(TSS ~ POPDEN2010WS + PCTAGSLPMID2001WS + WDRW_LDWS + PESTIC1997WS + ELEVWS + SWS + 
-          PCTCONIF2001WS + ROCKNWS + RDCRSWS + SANDWS + CLAYWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, ntree = 500) 
+          PCTCONIF2001WS + ROCKNWS + RDCRSWS + SANDWS + CLAYWS, data = tss.cal, importance = FALSE,  keep.forest = FALSE, ntree = 500) 
 print(rf.red)
 
 varImpPlot(rf.red, type = 1) #variable importance plot
@@ -565,7 +589,7 @@ importance(rf.red)
 
 # MODEL'S PREDICTION ERROR
 pred.rf.red <- predict(rf.red, newdata = tss.cal)
-plot(pred.rf.red ~ tss.cal$TSS, xlab="Observed TSS", ylab="Predicted TSS")
+plot(pred.rf.red ~ tss.cal$TSS, xlab="Observed TSS", ylab="Predicted TSS", log = "xy")
 abline(a=0,b=1)
 (rmse<-sqrt(sum((pred.rf.red - tss.cal$TSS)^2)/length(tss.cal$TSS)))#prediction error
 ```
@@ -588,7 +612,7 @@ plot(cm$RFtss, cm$TSS)
 
 ```{r}
 # REFERENCE ONLY
-rf.ref <- randomForest(TSS ~ ., data = tss.ref, importance = TRUE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
+rf.ref <- randomForest(TSS ~ ., data = tss.ref, importance = FALSE,  keep.forest = FALSE, ntree = 500) #run random forest model on all predictors
 print(rf.ref)
 
 varImpPlot(rf.ref, type = 1)
@@ -602,7 +626,7 @@ importance(rf.ref)
 # FULL MODEL
 rt <- rpart(TSS ~ ., data = tss.cal)
 plot(rt)
-text(rt, use.n = TRUE)
+text(rt, use.n = FALSE)
 
 names(rt)
 print(rt)
@@ -730,13 +754,13 @@ tss.ref <- subset(tss.sc, tss.sc$ReferenceSite == "REFERENCE") #subset reference
 # FULL MODEL
 set.seed(42)
 
-rf.full <- randomForest(y = tss.cal$Result_Numeric_mod, x = tss.cal[52:130], importance = TRUE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors for 500 trees, calibration dataset
+rf.full <- randomForest(y = tss.cal$Result_Numeric_mod, x = tss.cal[52:130], importance = FALSE,  keep.forest = FALSE, ntree = 500) #run random forest model on all predictors for 500 trees, calibration dataset
 print(rf.full)
 
 varImpPlot(rf.full, type = 1, n.var = 20) #variable importance plot
 
 # REDUCED MODEL
-rf.red <- randomForest(Result_Numeric_mod ~ CHEMWS+HYDWS+RDCRSWS+PESTIC1997WS+CONNWS+PCTCROP2001WS+WETINDEXWS+PCTSHRB2001WS+ELEVWS+WDRW_LDWS+IWI, data = tss.cal, importance = TRUE,  keep.forest = TRUE, ntree = 500) #only w/ predictors >4% MSE
+rf.red <- randomForest(Result_Numeric_mod ~ CHEMWS+HYDWS+RDCRSWS+PESTIC1997WS+CONNWS+PCTCROP2001WS+WETINDEXWS+PCTSHRB2001WS+ELEVWS+WDRW_LDWS+IWI, data = tss.cal, importance = FALSE,  keep.forest = FALSE, ntree = 500) #only w/ predictors >4% MSE
 print(rf.red)
 
 varImpPlot(rf.red, type = 1) #variable importance plot
@@ -748,7 +772,7 @@ importance(rf.red)
 
 
 # REFERENCE ONLY
-rf.ref <- randomForest(y = tss.ref$Result_Numeric_mod, x = tss.ref[52:130], importance = TRUE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors for 500 trees, calibration dataset
+rf.ref <- randomForest(y = tss.ref$Result_Numeric_mod, x = tss.ref[52:130], importance = FALSE,  keep.forest = FALSE, ntree = 500) #run random forest model on all predictors for 500 trees, calibration dataset
 print(rf.ref)
 
 varImpPlot(rf.ref, type = 1)
@@ -768,7 +792,7 @@ plotcp(rt) #model cross-validation
 # REDUCED MODEL
 rt.r <- rpart(Result_Numeric_mod ~ CONNWS+HYDWS+IWI+PCTSHRB2001WS+PESTIC1997WS+PCTURBMD2001WS+PCTAGSLPMID2001WS+PCTGRS2001WS+PRECIP9120WS+PCTCONIF2001WS, data = tss.cal.test)
 plot(rt.r)
-text(rt.r, use.n = TRUE)
+text(rt.r, use.n = FALSE)
 
 summary(rt.r)
 
@@ -790,4 +814,46 @@ sqrt(sum((p-tss.val$Result_Numeric_mod)^2)/length(tss.val$Result_Numeric_mod)) #
 
 # Test if the final reduced model is statistically different from the full model
 anova(rt, rt.r) #error  - no applicable method for "rpart"
+```
+
+## GROUP PREDICTORS BY HUMAN VS NATURAL DISTURBANCES - WORK IN PROGRESS (SABINE)
+
+```{r}
+human.mets <- kitty %>% 
+  filter(Category == "Anthropogenic" & kitty$`Use?` == 'y') %>% 
+  select(Metric_Query) %>% 
+  add_row(Metric_Query = "COMID") # want to include COMID as a column so adding it as a row.
+
+human.mets <- toupper(human.mets$Metric_Query) # All uppercase
+
+natural.mets <- kitty %>% 
+  filter(Category == "Natural" & kitty$`Use?` == 'y') %>% 
+  select(Metric_Query) %>% 
+  add_row(Metric_Query = "COMID")
+
+natural.mets <- toupper(natural.mets$Metric_Query)
+
+# Select out scmets by human and natural.
+# Ending in WS only
+scmetsws <- scmets %>% 
+    select(COMID | ends_with("ws")) %>%  # Keep COMID
+    rename_with(~str_remove(., paste0("WS", "$")), ends_with("WS")) # Remove 'WS' suffix so can match to metric names in 'kitty' table
+
+# Subset only column names that are in human or natural mets
+scmetws_human <- scmetsws[ , names(scmetsws) %in% human.mets] # 27 variables
+scmetws_natural <- scmetsws[ , names(scmetsws) %in% natural.mets] # 48 variables
+
+# Add 'WS' suffix back in
+colnames(scmetws_human) <- paste0(colnames(scmetws_human), "WS")
+colnames(scmetws_natural) <- paste0(colnames(scmetws_natural), "WS")
+  
+# Do the same thing for metrics not ending in 'WS'
+scmetsnows <- scmets %>% 
+    select(!ends_with("ws"))
+
+scmet_human <- scmetsnows[ , names(scmetsnows) %in% human.mets] # 1 variable
+scmet_natural <- scmetsnows[ , names(scmetsnows) %in% natural.mets] # 3 variables
+
+sc_human <- cbind(scmetws_human, scmet_human) # 30 variables  #Why is there a column at the end called scmet_human?  SYB figure this out later.
+sc_natural <- cbind(scmetws_natural, scmet_natural) # 49 variables (Total of 79, matches scmets)
 ```
