--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -20,6 +20,7 @@ library(caret)
 library(rpart)
 library(rpart.plot)
 library(ORDEQBioassessment)
+library(reprtree)
 ```
 
 # **2 - IMPORT DATA**
@@ -478,8 +479,7 @@ rm(list=c('human.mets', 'scmetsws', 'scmetws_human', 'scmetsnows', 'scmet_human'
 # SUBSET DATA AND REMOVE NON-VARIABLE ROWS
 tss.cal <- tss.sc %>% 
   filter(cal_val == 'CAL') %>%  
-  #select(-c(MLocID:COMID, PCT_EROD:SITE_TYPE)) %>% 
-  select(-c(MLocID, StationDes, EcoRegion4:COMID))  #subset calibration dataset
+  select(-c(MLocID, StationDes, EcoRegion4:COMID, PCT_RESIST))  #subset calibration dataset
 
 tss.val <- tss.sc %>% 
   filter(cal_val == 'VAL') %>%  
@@ -534,13 +534,16 @@ hist(scmets$PCTAGSLPMID2001WS, main = "", xlab = "% Ag 20% slopes (???), 2001")
 
 ```{r}
 # FULL MODEL
-set.seed(42)
-
-rf.full <- randomForest(TSS ~ ., tss.cal, importance = FALSE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
+rf.full <- randomForest(TSS ~ ., tss.cal, importance = TRUE,  keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
 print(rf.full)
 
-varImpPlot(rf.full, type = 1, n.var = 20) #variable importance plot
+varImpPlot(rf.full, type=1, n.var = 20) #variable importance plot
 vip(rf.full, aesthetics = list(color = "blue", fill = "blue")) #another plot
+
+importance(rf.full)
+rf.full$importance
+
+reprtree::plot.getTree(rf.full, k = 2,depth = 4)
 
 # # PARTIAL DEPENDENCE PLOTS - SINGLE ONLY, NEED TO INCORPORATE FOR LOOP FOR ALL VBLS
 # partialPlot(rf.full, as.data.frame(tss.cal), POPDEN2010WS, ylab = "Predicted TSS")
@@ -578,8 +581,6 @@ abline(a=0,b=1)
 
 ```{r}
 # REDUCED MODEL
-set.seed(42)
-
 rf.red <- randomForest(TSS ~ POPDEN2010WS + PCTAGSLPMID2001WS + WDRW_LDWS + PESTIC1997WS + ELEVWS + SWS + 
           PCTCONIF2001WS + ROCKNWS + RDCRSWS + SANDWS + CLAYWS, data = tss.cal, importance = FALSE,  keep.forest = FALSE, ntree = 500) 
 print(rf.red)
